added files to cloudinary

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -489,7 +489,7 @@ img {
     margin-bottom: var(--mb-0-5);
 }
 
-.skilss__name{
+.skills__name{
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
 }
